compiler/test/fail/array_des_missing_prop.js
// The target object does not have a value at index 3

const elements = [1, , 2];
const [a, b, c, d] = elements;
